# ECO-COL-PROD

./: .gitignore  COMANDO-RAPIDO.sh  ECO-COL-AUDIT-REPORT-20260118-180644.txt  ECO-COL-AUDIT-REPORT-20260118-180833.txt  ECO-COL-AUDIT-REPORT-20260118-181527.txt  ECO-COL-AUDIT-REPORT-20260118-181817.txt  ECO-COL-AUDIT-REPORT-20260118-182325.txt  ECO-COL-AUDIT-REPORT-20260118-182351.txt  ECO-COL-AUDIT-REPORT-20260118-182524.txt  INICIAR-REORGANIZACION.sh  REPORTE-MIGRACION.md  eco-col-auditor.sh  readme.md  ~$L DE ECO-COL.docx
DOCUMENTOS ADICIONALES ECO COL V2-3-4/: CHANGELOG.md  COMO-USAR-EL-NUEVO-ARCHIVO.txt  DEBUG_REPORT.txt  ECO-COL-DEMO-USUARIOS.html  README.txt  (+16 more)
ECO-COL---V0-1/eco-col-v1/: .gitignore  Cargo.toml  Makefile  README.md
ECO-COL---V0-1/eco-col-v1/apps/acquisition-node/: package.json
ECO-COL---V0-1/eco-col-v1/apps/reading-node/: package.json
ECO-COL---V0-1/eco-col-v1/crates/dicom-core/: Cargo.toml  README.md
ECO-COL---V0-1/eco-col-v1/crates/dicom-core/benches/: parser_benchmark.rs
ECO-COL---V0-1/eco-col-v1/crates/dicom-core/src/: error.rs  lib.rs  metadata.rs  parser.rs  pixel.rs  validation.rs
ECO-COL---V0-1/eco-col-v1/crates/dicom-core/tests/: integration_test.rs
ECO-COL---V0-1/eco-col-v1/crates/dicom-network/: Cargo.toml
ECO-COL---V0-1/eco-col-v1/crates/dicom-network/src/: lib.rs
ECO-COL---V0-1/eco-col-v1/crates/notification-service/: Cargo.toml
ECO-COL---V0-1/eco-col-v1/crates/peer-discovery/: Cargo.toml
ECO-COL---V0-1/eco-col-v1/crates/report-generator/: Cargo.toml
ECO-COL---V0-1/eco-col-v1/crates/storage-engine/: Cargo.toml
ECO-COL---V0-1/eco-col-v1/crates/sync-engine/: Cargo.toml
ECO-COL---V0-1/eco-col-v1/crates/wasm-renderer/: Cargo.toml
ECO-COL---V0-1/eco-col-v1/crates/worklist-manager/: Cargo.toml
ECO-COL---V0-1/eco-col-v1/docs/: architecture.md
ECO-COL---V0-1/eco-col-v1/sql/: schema.sql
(+50 files in other folders)
