[workspace]
resolver = "2"
members = [
    "crates/dicom-core",
    "crates/storage-engine",
    "crates/dicom-network",
    "crates/peer-discovery",
    "crates/notification-service",
    "crates/worklist-manager",
    "crates/sync-engine",
    "crates/report-generator",
    "crates/wasm-renderer",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["ECO-COL Team"]
license = "Proprietary"

[workspace.dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
dicom = "0.6"
rusqlite = { version = "0.30", features = ["bundled"] }
mdns = "3.0"
ring = "0.17"
sha2 = "0.10"
uuid = { version = "1.6", features = ["v4", "serde"] }
printpdf = "0.7"
wasm-bindgen = "0.2"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
